import React from 'react';
import {
  fireEvent,
  render,
  RenderResult,
  cleanup,
} from '@testing-library/react';
import '@testing-library/jest-dom';
import Image from '../Image';
import { config } from 'react-transition-group';

config.disabled = true;

describe('test Image Component', () => {
  let wrapper: RenderResult;
  beforeEach(() => {
    wrapper = render(
      <Image
        src="https://www.haoduoliao.com/wp-content/uploads/2019/11/wei_xin_jie_tu-2236.jpg"
        width={200}
      />,
      { container: document.body },
    );
  });
  it('component should render correctly', () => {
    expect(wrapper.container.querySelector('.g-image')).toBeInTheDocument();
    expect(wrapper.container.getElementsByTagName('img')[0]).toBeVisible();
    expect(
      wrapper.container.querySelector('.g-image-info-mask'),
    ).not.toBeVisible();
    expect(wrapper.container.getElementsByTagName('img')[0].src).toEqual(
      'https://www.haoduoliao.com/wp-content/uploads/2019/11/wei_xin_jie_tu-2236.jpg',
    );
    expect(wrapper.asFragment()).toMatchSnapshot();
  });
  it('hover should make info to be visible', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    expect(mask).toBeVisible();
    fireEvent.mouseLeave(mask);
    expect(mask).not.toBeVisible();
  });
  it('click mask should make lightup to be visible', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const lightup = document.querySelector('.g-image-lightup-wrapper');
    expect(lightup).toBeInTheDocument();
    expect(wrapper.asFragment()).toMatchSnapshot();
  });
  it('click mask should close lightup', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const lightup = document.querySelector('.g-image-lightup-wrapper');
    expect(lightup).toBeInTheDocument();
    const lightupMask = wrapper.container.querySelector(
      '.g-image-lightup-mask',
    );
    fireEvent.click(lightupMask);
    expect(lightup).not.toBeInTheDocument();
    expect(wrapper.asFragment()).toMatchSnapshot();
  });
  it('test closeButton', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const lightup = document.querySelector('.g-image-lightup-wrapper');
    expect(lightup).toBeInTheDocument();
    const closeButton = wrapper.container.querySelectorAll(
      '.g-image-option-item',
    )[0];
    expect(closeButton).toBeInTheDocument();
    fireEvent.click(closeButton);
    expect(lightup).not.toBeInTheDocument();
    expect(wrapper.asFragment()).toMatchSnapshot();
  });
  it('test turn right', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const turnRightButton = wrapper.container.querySelectorAll(
      '.g-image-option-item',
    )[1];
    const img = wrapper.container.querySelector('.g-image-lightup-content');
    expect(turnRightButton).toBeInTheDocument();
    fireEvent.click(turnRightButton);
    expect(img).toHaveStyle({ transform: `scale3d(1, 1, 1) rotate(90deg)` });
  });
  it('test turn left', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const turnLeftButton = wrapper.container.querySelectorAll(
      '.g-image-option-item',
    )[2];
    const img = wrapper.container.querySelector('.g-image-lightup-content');
    expect(turnLeftButton).toBeInTheDocument();
    fireEvent.click(turnLeftButton);
    expect(img).toHaveStyle({ transform: `scale3d(1, 1, 1) rotate(-90deg)` });
  });
  it('test enlarge', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const enlargeButton = wrapper.container.querySelectorAll(
      '.g-image-option-item',
    )[3];
    const img = wrapper.container.querySelector('.g-image-lightup-content');
    expect(enlargeButton).toBeInTheDocument();
    for (let i = 1; i <= 10; i++) {
      let num: number = 1;
      num = Math.min(Math.pow(2, i), 16);
      fireEvent.click(enlargeButton);
      expect(img).toHaveStyle({
        transform: `scale3d(${num}, ${num}, 1) rotate(0deg)`,
      });
    }
    const lightupMask = wrapper.container.querySelector(
      '.g-image-lightup-mask',
    );
    fireEvent.click(lightupMask);
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const newImg = wrapper.container.querySelector('.g-image-lightup-content');
    expect(newImg).toHaveStyle({
      transform: `scale3d(1, 1, 1) rotate(0deg)`,
    });
  });
  it('test zoom', () => {
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const zoomButton = wrapper.container.querySelectorAll(
      '.g-image-option-item',
    )[4];
    const img = wrapper.container.querySelector('.g-image-lightup-content');
    expect(zoomButton).toBeInTheDocument();
    for (let i = 1; i <= 10; i++) {
      let num: number = 1;
      num = Math.max(Math.pow(2, -i), 0.125);
      fireEvent.click(zoomButton);
      expect(img).toHaveStyle({
        transform: `scale3d(${num}, ${num}, 1) rotate(0deg)`,
      });
    }
    const lightupMask = wrapper.container.querySelector(
      '.g-image-lightup-mask',
    );
    fireEvent.click(lightupMask);
    fireEvent.mouseEnter(mask);
    fireEvent.click(mask);
    const newImg = wrapper.container.querySelector('.g-image-lightup-content');
    expect(newImg).toHaveStyle({
      transform: `scale3d(1, 1, 1) rotate(0deg)`,
    });
  });
  it('can handle error', () => {
    cleanup();
    wrapper = render(
      <Image
        src="https://www.haoduoliao.com/a.jpg"
        width={200}
        fallback="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMIAAADDCAYAAADQvc6UAAABRWlDQ1BJQ0MgUHJvZmlsZQAAKJFjYGASSSwoyGFhYGDIzSspCnJ3UoiIjFJgf8LAwSDCIMogwMCcmFxc4BgQ4ANUwgCjUcG3awyMIPqyLsis7PPOq3QdDFcvjV3jOD1boQVTPQrgSkktTgbSf4A4LbmgqISBgTEFyFYuLykAsTuAbJEioKOA7DkgdjqEvQHEToKwj4DVhAQ5A9k3gGyB5IxEoBmML4BsnSQk8XQkNtReEOBxcfXxUQg1Mjc0dyHgXNJBSWpFCYh2zi+oLMpMzyhRcASGUqqCZ16yno6CkYGRAQMDKMwhqj/fAIcloxgHQqxAjIHBEugw5sUIsSQpBobtQPdLciLEVJYzMPBHMDBsayhILEqEO4DxG0txmrERhM29nYGBddr//5/DGRjYNRkY/l7////39v///y4Dmn+LgeHANwDrkl1AuO+pmgAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAwqADAAQAAAABAAAAwwAAAAD9b/HnAAAHlklEQVR4Ae3dP3PTWBSGcbGzM6GCKqlIBRV0dHRJFarQ0eUT8LH4BnRU0NHR0UEFVdIlFRV7TzRksomPY8uykTk/zewQfKw/9znv4yvJynLv4uLiV2dBoDiBf4qP3/ARuCRABEFAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghgg0Aj8i0JO4OzsrPv69Wv+hi2qPHr0qNvf39+iI97soRIh4f3z58/u7du3SXX7Xt7Z2enevHmzfQe+oSN2apSAPj09TSrb+XKI/f379+08+A0cNRE2ANkupk+ACNPvkSPcAAEibACyXUyfABGm3yNHuAECRNgAZLuYPgEirKlHu7u7XdyytGwHAd8jjNyng4OD7vnz51dbPT8/7z58+NB9+/bt6jU/TI+AGWHEnrx48eJ/EsSmHzx40L18+fLyzxF3ZVMjEyDCiEDjMYZZS5wiPXnyZFbJaxMhQIQRGzHvWR7XCyOCXsOmiDAi1HmPMMQjDpbpEiDCiL358eNHurW/5SnWdIBbXiDCiA38/Pnzrce2YyZ4//59F3ePLNMl4PbpiL2J0L979+7yDtHDhw8vtzzvdGnEXdvUigSIsCLAWavHp/+qM0BcXMd/q25n1vF57TYBp0a3mUzilePj4+7k5KSLb6gt6ydAhPUzXnoPR0dHl79WGTNCfBnn1uvSCJdegQhLI1vvCk+fPu2ePXt2tZOYEV6/fn31dz+shwAR1sP1cqvLntbEN9MxA9xcYjsxS1jWR4AIa2Ibzx0tc44fYX/16lV6NDFLXH+YL32jwiACRBiEbf5KcXoTIsQSpzXx4N28Ja4BQoK7rgXiydbHjx/P25TaQAJEGAguWy0+2Q8PD6/Ki4R8EVl+bzBOnZY95fq9rj9zAkTI2SxdidBHqG9+skdw43borCXO/ZcJdraPWdv22uIEiLA4q7nvvCug8WTqzQveOH26fodo7g6uFe/a17W3+nFBAkRYENRdb1vkkz1CH9cPsVy/jrhr27PqMYvENYNlHAIesRiBYwRy0V+8iXP8+/fvX11Mr7L7ECueb/r48eMqm7FuI2BGWDEG8cm+7G3NEOfmdcTQw4h9/55lhm7DekRYKQPZF2ArbXTAyu4kDYB2YxUzwg0gi/41ztHnfQG26HbGel/crVrm7tNY+/1btkOEAZ2M05r4FB7r9GbAIdxaZYrHdOsgJ/wCEQY0J74TmOKnbxxT9n3FgGGWWsVdowHtjt9Nnvf7yQM2aZU/TIAIAxrw6dOnAWtZZcoEnBpNuTuObWMEiLAx1HY0ZQJEmHJ3HNvGCBBhY6jtaMoEiJB0Z29vL6ls58vxPcO8/zfrdo5qvKO+d3Fx8Wu8zf1dW4p/cPzLly/dtv9Ts/EbcvGAHhHyfBIhZ6NSiIBTo0LNNtScABFyNiqFCBChULMNNSdAhJyNSiECRCjUbEPNCRAhZ6NSiAARCjXbUHMCRMjZqBQiQIRCzTbUnAARcjYqhQgQoVCzDTUnQIScjUohAkQo1GxDzQkQIWejUogAEQo121BzAkTI2agUIkCEQs021JwAEXI2KoUIEKFQsw01J0CEnI1KIQJEKNRsQ80JECFno1KIABEKNdtQcwJEyNmoFCJAhELNNtScABFyNiqFCBChULMNNSdAhJyNSiECRCjUbEPNCRAhZ6NSiAARCjXbUHMCRMjZqBQiQIRCzTbUnAARcjYqhQgQoVCzDTUnQIScjUohAkQo1GxDzQkQIWejUogAEQo121BzAkTI2agUIkCEQs021JwAEXI2KoUIEKFQsw01J0CEnI1KIQJEKNRsQ80JECFno1KIABEKNdtQcwJEyNmoFCJAhELNNtScABFyNiqFCBChULMNNSdAhJyNSiECRCjUbEPNCRAhZ6NSiAARCjXbUHMCRMjZqBQiQIRCzTbUnAARcjYqhQgQoVCzDTUnQIScjUohAkQo1GxDzQkQIWejUogAEQo121BzAkTI2agUIkCEQs021JwAEXI2KoUIEKFQsw01J0CEnI1KIQJEKNRsQ80JECFno1KIABEKNdtQcwJEyNmoFCJAhELNNtScABFyNiqFCBChULMNNSdAhJyNSiEC/wGgKKC4YMA4TAAAAABJRU5ErkJggg=="
      />,
      { container: document.body },
    );
    expect(wrapper.container.querySelector('.g-image')).toBeInTheDocument();
    const img = wrapper.container.getElementsByTagName('img')[0];
    fireEvent.error(img);
    expect(img).toBeInTheDocument();
    expect(img.src).toEqual(
      'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMIAAADDCAYAAADQvc6UAAABRWlDQ1BJQ0MgUHJvZmlsZQAAKJFjYGASSSwoyGFhYGDIzSspCnJ3UoiIjFJgf8LAwSDCIMogwMCcmFxc4BgQ4ANUwgCjUcG3awyMIPqyLsis7PPOq3QdDFcvjV3jOD1boQVTPQrgSkktTgbSf4A4LbmgqISBgTEFyFYuLykAsTuAbJEioKOA7DkgdjqEvQHEToKwj4DVhAQ5A9k3gGyB5IxEoBmML4BsnSQk8XQkNtReEOBxcfXxUQg1Mjc0dyHgXNJBSWpFCYh2zi+oLMpMzyhRcASGUqqCZ16yno6CkYGRAQMDKMwhqj/fAIcloxgHQqxAjIHBEugw5sUIsSQpBobtQPdLciLEVJYzMPBHMDBsayhILEqEO4DxG0txmrERhM29nYGBddr//5/DGRjYNRkY/l7////39v///y4Dmn+LgeHANwDrkl1AuO+pmgAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAwqADAAQAAAABAAAAwwAAAAD9b/HnAAAHlklEQVR4Ae3dP3PTWBSGcbGzM6GCKqlIBRV0dHRJFarQ0eUT8LH4BnRU0NHR0UEFVdIlFRV7TzRksomPY8uykTk/zewQfKw/9znv4yvJynLv4uLiV2dBoDiBf4qP3/ARuCRABEFAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghggQAQZQKAnYEaQBAQaASKIAQJEkAEEegJmBElAoBEgghgg0Aj8i0JO4OzsrPv69Wv+hi2qPHr0qNvf39+iI97soRIh4f3z58/u7du3SXX7Xt7Z2enevHmzfQe+oSN2apSAPj09TSrb+XKI/f379+08+A0cNRE2ANkupk+ACNPvkSPcAAEibACyXUyfABGm3yNHuAECRNgAZLuYPgEirKlHu7u7XdyytGwHAd8jjNyng4OD7vnz51dbPT8/7z58+NB9+/bt6jU/TI+AGWHEnrx48eJ/EsSmHzx40L18+fLyzxF3ZVMjEyDCiEDjMYZZS5wiPXnyZFbJaxMhQIQRGzHvWR7XCyOCXsOmiDAi1HmPMMQjDpbpEiDCiL358eNHurW/5SnWdIBbXiDCiA38/Pnzrce2YyZ4//59F3ePLNMl4PbpiL2J0L979+7yDtHDhw8vtzzvdGnEXdvUigSIsCLAWavHp/+qM0BcXMd/q25n1vF57TYBp0a3mUzilePj4+7k5KSLb6gt6ydAhPUzXnoPR0dHl79WGTNCfBnn1uvSCJdegQhLI1vvCk+fPu2ePXt2tZOYEV6/fn31dz+shwAR1sP1cqvLntbEN9MxA9xcYjsxS1jWR4AIa2Ibzx0tc44fYX/16lV6NDFLXH+YL32jwiACRBiEbf5KcXoTIsQSpzXx4N28Ja4BQoK7rgXiydbHjx/P25TaQAJEGAguWy0+2Q8PD6/Ki4R8EVl+bzBOnZY95fq9rj9zAkTI2SxdidBHqG9+skdw43borCXO/ZcJdraPWdv22uIEiLA4q7nvvCug8WTqzQveOH26fodo7g6uFe/a17W3+nFBAkRYENRdb1vkkz1CH9cPsVy/jrhr27PqMYvENYNlHAIesRiBYwRy0V+8iXP8+/fvX11Mr7L7ECueb/r48eMqm7FuI2BGWDEG8cm+7G3NEOfmdcTQw4h9/55lhm7DekRYKQPZF2ArbXTAyu4kDYB2YxUzwg0gi/41ztHnfQG26HbGel/crVrm7tNY+/1btkOEAZ2M05r4FB7r9GbAIdxaZYrHdOsgJ/wCEQY0J74TmOKnbxxT9n3FgGGWWsVdowHtjt9Nnvf7yQM2aZU/TIAIAxrw6dOnAWtZZcoEnBpNuTuObWMEiLAx1HY0ZQJEmHJ3HNvGCBBhY6jtaMoEiJB0Z29vL6ls58vxPcO8/zfrdo5qvKO+d3Fx8Wu8zf1dW4p/cPzLly/dtv9Ts/EbcvGAHhHyfBIhZ6NSiIBTo0LNNtScABFyNiqFCBChULMNNSdAhJyNSiECRCjUbEPNCRAhZ6NSiAARCjXbUHMCRMjZqBQiQIRCzTbUnAARcjYqhQgQoVCzDTUnQIScjUohAkQo1GxDzQkQIWejUogAEQo121BzAkTI2agUIkCEQs021JwAEXI2KoUIEKFQsw01J0CEnI1KIQJEKNRsQ80JECFno1KIABEKNdtQcwJEyNmoFCJAhELNNtScABFyNiqFCBChULMNNSdAhJyNSiECRCjUbEPNCRAhZ6NSiAARCjXbUHMCRMjZqBQiQIRCzTbUnAARcjYqhQgQoVCzDTUnQIScjUohAkQo1GxDzQkQIWejUogAEQo121BzAkTI2agUIkCEQs021JwAEXI2KoUIEKFQsw01J0CEnI1KIQJEKNRsQ80JECFno1KIABEKNdtQcwJEyNmoFCJAhELNNtScABFyNiqFCBChULMNNSdAhJyNSiECRCjUbEPNCRAhZ6NSiAARCjXbUHMCRMjZqBQiQIRCzTbUnAARcjYqhQgQoVCzDTUnQIScjUohAkQo1GxDzQkQIWejUogAEQo121BzAkTI2agUIkCEQs021JwAEXI2KoUIEKFQsw01J0CEnI1KIQJEKNRsQ80JECFno1KIABEKNdtQcwJEyNmoFCJAhELNNtScABFyNiqFCBChULMNNSdAhJyNSiEC/wGgKKC4YMA4TAAAAABJRU5ErkJggg==',
    );
    const mask = wrapper.container.querySelector('.g-image-info-mask');
    expect(mask).not.toBeInTheDocument();
    fireEvent.click(img);
    expect(
      wrapper.container.querySelector('.g-image-lightup-wrapper'),
    ).not.toBeInTheDocument();
    expect(wrapper.asFragment()).toMatchSnapshot();
  });
});
